[package]
name = "char-lex"
version = "0.1.0"
authors = ["Lukas3674 <lukashassler.lh@gmail.com>"]
edition = "2018"
repository = "https://github.com/Lukas3674/char-lex"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["lexer", "lexing", "lex", "char"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
char-lex-macro = { path = "./char-lex-macro" }
