[package]
name = "char-lex-macro"
version = "0.1.3"
authors = ["Lukas3674 <lukashassler.lh@gmail.com>"]
edition = "2018"
repository = "https://github.com/Lukas3674/char-lex"
license = "MIT OR Apache-2.0"
description = "Create easy enum based lexers"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "char_lex_macro"
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "fold"] }
