[package]
name = "char-lex"
version = "0.1.1"
authors = ["Lukas3674 <lukashassler.lh@gmail.com>"]
edition = "2018"
repository = "https://github.com/Lukas3674/char-lex"
license = "MIT OR Apache-2.0"
description = "Create easy enum based lexers"
readme = "../README.md"
keywords = ["lexer", "lexing", "tokenizer", "parser", "char"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
char-lex-macro = { version = "0.1", optional = true }


[features]
default = ["export_derive"]

export_derive = ["char-lex-macro"]